# ASM32-64

asm_mandelbrot/: c  makefile
asm_mandelbrot/src/: main.s  mnd.h  print.s  render.s  render_def.s  render_init.c
hello_world/: hello_world.s  makefile
mandelbrot/: CMakeLists.txt
mandelbrot/src/: main.c  mnd.h  mnd_frame.c  mnd_render_avx.c  mnd_render_portable.c  mnd_render_sse.c
print/: c  main.c  makefile  print.s  ql.h  ql.s
sqs/: c  makefile  sqs.s
